# gangwon-junseok-backend

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rules.json
.github/ISSUE_TEMPLATE/workflows/: deploy.yml
.github/workflows/: deploy.yml
app/: dependencies.py  deps.py
app/api/route/: chat_router.py
app/database/: db.py
app/models/schemas/: chat.py
app/repository/: vector_repo.py
app/repository/client/: upstage_client.py
app/routers/: agent.py  chat.py
app/service/: agent_service.py  chat_service.py  embedding_service.py  time_service.py
infra/k8s/application/: 01-namespace.yaml  02-configmap.yaml  03-secret.yaml  04-chromadb.yaml  05-backend.yaml
